# safegraph

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmark/: adapters.rs  common.rs  main.rs
docs/: mermaid-header.html
macro/: Cargo.toml  lib.rs
src/: collection.rs  convert.rs  graph.rs  lib.rs
src/algo/: bfs.rs  bipartite.rs  bridges.rs  connectivity.rs  dfs.rs  dominators.rs  feedback_arc_set.rs  matching.rs  max_flow.rs  min_spanning_tree.rs  mod.rs  page_rank.rs  shortest_path.rs  simple_paths.rs  toposort.rs  tred.rs
src/graph/: as_ref.rs  assert_stable.rs  capability.rs  context.rs  edge.rs  operation.rs  prelude.rs  stabilized.rs  undirected.rs  walk_item.rs
src/raw_graph/: flat_adj_edge.rs  hyper_edge.rs  linked_adj_edge.rs  matrix.rs  mod.rs
tests/: btree.rs  context.rs  edge.rs  graph_macro.rs  new_features.rs  raw_graph.rs  raw_graph_hyper.rs  stabilized.rs  swap_no_patch.rs  swap_remove_bug.rs  ui.rs  vec.rs  zero_cost.rs
tests/ui/: graph_macro_duplicate_edge_expr.rs  graph_macro_duplicate_edge_expr.stderr  graph_macro_duplicate_edge_ident.rs  graph_macro_duplicate_edge_ident.stderr  graph_macro_duplicate_node_expr.rs  graph_macro_duplicate_node_expr.stderr  graph_macro_many_syntax_errors.rs  graph_macro_many_syntax_errors.stderr  graph_macro_stable_edge.rs  graph_macro_stable_edge.stderr  graph_macro_stable_node.rs  graph_macro_stable_node.stderr  scope_lifetime_violation.rs  scope_lifetime_violation.stderr  scope_mut_swap_contexts.rs  scope_mut_swap_contexts.stderr
tests/ui_dep/: Cargo.toml  lib.rs
